Amit added changes

--- a/ui/website/src/Banner/Banner.css
+++ b/ui/website/src/Banner/Banner.css
@@ -13,8 +13,11 @@
     position: relative;
     z-index: 1;
     overflow: hidden;
-    background-image: linear-gradient(44deg,#8232ec,#695cff);
+    /*background-image: linear-gradient(44deg,#8232ec,#695cff);*/
+    background-image: url("/images/IOG_2.png");
+    background-size: 100% 75%;
     color: #fff;
+    height: 500px;
 }
 .container {
     max-width: 930px;
