--- a/ui/website/src/Downstream/Downstream.css
+++ b/ui/website/src/Downstream/Downstream.css
@@ -5,7 +5,7 @@
 }
 
 .block{
-	background-color: #fff;
+	background-color: #ffc60b;
     border-radius: 4px;
     box-shadow: 0 10px 29px rgba(92,141,255,.22);
     margin-bottom: 50px;
