--- a/ui/website/src/Banner/Banner.css
+++ b/ui/website/src/Banner/Banner.css
@@ -81,3 +81,38 @@
     border-color: #fff;
     color: #fff;
 }
+
+.banner-wrapper:before {
+    left: -50px;
+    -webkit-animation: swell 7s ease -1.25s infinite;
+    animation: swell 7s ease -1.25s infinite;
+    opacity: .3;
+}
+
+.banner-wrapper:after {
+    left: 50px;
+    -webkit-animation: swell 7s cubic-bezier(.36,.45,.63,.53) infinite;
+    animation: swell 7s cubic-bezier(.36,.45,.63,.53) infinite;
+    opacity: .1;
+}
+@keyframes swell {
+  0%,
+  100% {
+    transform: translate3d(0, -5px, 0);
+  }
+  50% {
+    transform: translate3d(0, 15px, 0);
+  }
+}
+
+.banner-wrapper:after, .banner-wrapper:before {
+    position: absolute;
+    z-index: 0;
+    bottom: -5px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #695cff;
+    border-radius: 0 0 50% 50%;
+    content: "";
+}
