--- a/ui/website/src/Banner/Banner.css
+++ b/ui/website/src/Banner/Banner.css
@@ -112,7 +112,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #695cff;
+    background-color: #367588;
     border-radius: 0 0 50% 50%;
     content: "";
 }
