--- a/ui/website/src/Downstream/Downstream.css
+++ b/ui/website/src/Downstream/Downstream.css
@@ -51,3 +51,89 @@
 .text-justify{
 	text-align: justify;
 }
+.upstreamBg{
+    background-size: 100% 100%;
+    /*background-color: #367588;*/
+    background-image: url("/images/data_image_svg+xml;….svg");
+    height: 540px;
+}
+
+.upstream-wrapper:before {
+  background-image: url("/images/data_image_svg+xml;….svg");
+  background-size: 100% 100%;
+      height: 560px;
+}
+.upstream-wrapper:after {
+  background-image: url("/images/data_image_svg+xml;….svg");
+  background-size: 100% 100%;
+      height: 560px;
+}
+
+.upstream-wrapper:before {
+    -webkit-animation: swell 7s ease -1.25s infinite;
+    animation: swell 7s ease -1.25s infinite;
+    background-position: calc(50% - 100px) 50%;
+    opacity: .2;
+}
+
+.upstream-wrapper:before {
+    position: absolute;
+    z-index: 0;
+    top: -15px;
+    bottom: -15px;
+    left: 0;
+    width: 100%;
+    background-repeat: repeat-x;
+    content: "";
+    pointer-events: none;
+}
+
+.upstream-wrapper:after {
+    -webkit-animation: swell 7s cubic-bezier(.36,.45,.63,.53) infinite;
+    animation: swell 7s cubic-bezier(.36,.45,.63,.53) infinite;
+    background-position: calc(50% + 100px) 50%;
+    opacity: .1;
+}
+.upstream-wrapper:after, .upstream-wrapper:before {
+    position: absolute;
+    z-index: 0;
+    top: -15px;
+    bottom: -15px;
+    left: 0;
+    width: 100%;
+    background-repeat: repeat-x;
+    content: "";
+    pointer-events: none;
+}
+@keyframes swell {
+  0%,
+  100% {
+    transform: translate3d(0, -5px, 0);
+  }
+  50% {
+    transform: translate3d(0, 15px, 0);
+  }
+}
+.upstream-wrapperafter, .upstream-wrapper:before {
+    position: absolute;
+    z-index: 0;
+    top: -15px;
+    bottom: -15px;
+    left: 0;
+    width: 100%;
+    background-repeat: repeat-x;
+    content: "";
+    pointer-events: none;
+}
+.upstreamBg{
+    position: relative;
+    z-index: 1;
+    background-position: 50%;
+    background-repeat: repeat-x;
+}
+.svgAnimation{
+    background-size: 100% 100%;
+    /*background-color: #367588;*/
+    background-image: url("/images/data_image_svgs.svg");
+    height: 540px;
+}
