--- a/ui/website/src/Downstream/Downstream.css
+++ b/ui/website/src/Downstream/Downstream.css
@@ -2,10 +2,12 @@
 	height: auto;
 	background-color: transparent;
 	padding-top: 100px;
+	/*background-color: #fff;*/
+	/*padding-top: 35px;*/
 }
 
 .block{
-	background-color: #ffc60b;
+	/*background-color: #ffc60b;*/
     border-radius: 4px;
     box-shadow: 0 10px 29px rgba(92,141,255,.22);
     margin-bottom: 50px;
@@ -20,7 +22,7 @@
 }
 
 .contentheader{
-	padding-bottom:50px;
+	padding-bottom:35px;
 }
 .contentheader h1{
 	font-size: 40px;
