--- a/ui/website/src/HomePage/HomePage.css
+++ b/ui/website/src/HomePage/HomePage.css
@@ -6,5 +6,5 @@ body{
   overflow-x: hidden;
 }
 div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
-	font-family: 'Railway';
+	font-family: 'Montserrat-Regular';
 }
