--- a/ui/website/src/Socialmedia/Socialmedia.css
+++ b/ui/website/src/Socialmedia/Socialmedia.css
@@ -1,135 +1,84 @@
-.socialblock{
-    height: 140px;
-    padding-bottom: 20px;
-}
-.socialblock-bg{
-    background-color:#eee;
-}
 
-:root { 
-  --peach: #ffad69;
-  --white: #ffffff;
-  --black: #000;
-  --grey : #D3D3D3;
-  --facebook: #3b5999;
-  --twitter: #55acee;
-  --instagram: #e4405f;
-  --apple: #007BB6;
-  
-}
-
-.socialblock ul {
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform:translate(-50%, -50%);
+*{
   margin: 0;
   padding: 0;
-  display: flex;
+  outline: none;
+  border: none;
+  box-sizing: border-box;
 }
-
-.socialblock ul li {
-  list-style: none;
-  margin: 0 40px;
+*:before,
+*:after{
+  box-sizing: border-box;
 }
-
-.socialblock ul li a .fa{
-  font-size: 25px;
-   color: black;
-   line-height: 60px;
-   transition: .5s;
+html,
+body{
+  min-height: 100%;
 }
-
- .socialblock ul li a {
+body{
+  background-image: radial-gradient(mintcream 0%, lightgray 100%);
+}
+h1{
+  display: table;
+  margin: 5% auto 0;
+  text-transform: uppercase;
+  font-family: 'Anaheim', sans-serif;
+  font-size: 4em;
+  font-weight: 400;
+  text-shadow: 0 1px white, 0 2px black;
+}
+.container{
+  margin: 4% auto;
+  width: 210px;
+  height: 140px;
   position: relative;
-   display: block;
-   width: 55px;
-   height: 55px;
-   background: #808080;
-   text-align: center;
-   transform: perspective(1000px) rotate(-30deg) skew(25deg) translate(0,0);
-   transition: .5s;
-   box-shadow: -30px 30px 10px rgba(0,0,0,.5);
+  perspective: 1000px;
 }
-
-.socialblock ul li a:before {
-  content: '';
-  position: absolute;
-  top: 10px ;
-  left: -20px;
-  height: 100%;
-  width: 20px;
-  background: #93a092;
-  transition: .5s;
-  transform: rotate(0deg) skewY(-45deg);
-}
-
-.socialblock ul li a:after {
-  content: '';
-  position: absolute;
-  bottom: -20px ;
-  left: -10px;
-  height: 20px;
+#carousel{
   width: 100%;
-  background: var(--grey);
-  transition: .5s;
-  transform: rotate(0deg) skewX(-45deg);
+  height: 100%;
+  position: absolute;
+  transform-style: preserve-3d;
+  animation: rotation 20s infinite linear;
+}
+#carousel:hover{
+  animation-play-state: paused;
+}
+#carousel figure{
+  display: block;
+  position: absolute;
+  width: 186px;
+  height: 116px;
+  left: 10px;
+  top: 10px;
+  background: black;
+  overflow: hidden;
+  border: solid 5px black;
+}
+#carousel figure:nth-child(1){transform: rotateY(0deg) translateZ(288px);}
+#carousel figure:nth-child(2) { transform: rotateY(40deg) translateZ(288px);}
+#carousel figure:nth-child(3) { transform: rotateY(80deg) translateZ(288px);}
+#carousel figure:nth-child(4) { transform: rotateY(120deg) translateZ(288px);}
+#carousel figure:nth-child(5) { transform: rotateY(160deg) translateZ(288px);}
+#carousel figure:nth-child(6) { transform: rotateY(200deg) translateZ(288px);}
+#carousel figure:nth-child(7) { transform: rotateY(240deg) translateZ(288px);}
+#carousel figure:nth-child(8) { transform: rotateY(280deg) translateZ(288px);}
+#carousel figure:nth-child(9) { transform: rotateY(320deg) translateZ(288px);}
+
+img{
+  -webkit-filter: grayscale(1);
+  cursor: pointer;
+  transition: all .5s ease;
+}
+img:hover{
+  -webkit-filter: grayscale(0);
+  transform: scale(1.2,1.2);
 }
 
-.socialblock ul li a:hover{
-  transform: perspective(1000px) rotate(-30deg) skew(25deg) translate(20px,-20px);
-  box-shadow: -50px 50px 50px rgba(0,0,0,.5);
-}
-.socialblock ul li:hover .fa{
-  color:white;
-}
-
-
-.socialblock ul li:hover:nth-child(1) a {
-  background: var(--facebook);
-}
-
-.socialblock ul li:hover:nth-child(1) a:before {
-  background: #5E77AB;
-}
-
-.socialblock ul li:hover:nth-child(1) a:after {
-  background: #4C68A2;
-}
-
-.socialblock ul li:hover:nth-child(3) a {
-  background: var(--twitter);
-}
-
-.socialblock ul li:hover:nth-child(3) a:before {
-  background: #64B2EE;
-}
-
-.socialblock ul li:hover:nth-child(3) a:after{
-  background: #73BAF0;
-}
-
-
-.socialblock ul li:hover:nth-child(2) a {
-  background: var(--instagram);
-}
-
-.socialblock ul li:hover:nth-child(2) a:before {
-  background: #E4506B;
-}
-
-.socialblock ul li:hover:nth-child(2) a:after{
-  background: #E7617A;
-}
-
-.socialblock ul li:hover:nth-child(4) a {
-  background: var(--apple);
-}
-
-.socialblock ul li:hover:nth-child(4) a:before {
-  background: #257aa3;
-}
-
-.socialblock ul li:hover:nth-child(4) a:after{
-  background: #53a4cc;
+@keyframes rotation{
+  from{
+    transform: rotateY(0deg);
+  }
+  to{
+    transform: rotateY(360deg);
+  }
 }
