--- a/ui/website/src/HomePage/HomePage.css
+++ b/ui/website/src/HomePage/HomePage.css
@@ -6,5 +6,11 @@ body{
   overflow-x: hidden;
 }
 div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
-	font-family: 'Montserrat-Regular';
+	font-family: 'Raleway';
+	/*font-family: 'Raleway,Sans-Serif';*/
+}
+
+@font-face {
+  font-family: 'MyWebFont';
+  src: url('../../raleway.regular.ttf')  format('truetype'); /* Legacy iOS */
 }
