Manali added changes in About us page

--- a/ui/website/src/App.css
+++ b/ui/website/src/App.css
@@ -648,18 +648,18 @@ ul.no-icon-list {
 
 
 .bgiogblue{
-    background-color: #367588;
+    background-color: #003bb3;
 }
 
 .textcolorblue{
-    color:#367588;
+    color:#003bb3;
 }
 .bgiogyellow{
-    background-color: #ffbf00;
+    background-color: #f19000;
 }
 
 .textcoloryellow{
-    color:#ffbf00;
+    color:#f19000;
 }
 
 .lightgray{
