--- a/ui/website/src/AboutUs/AboutUs.css
+++ b/ui/website/src/AboutUs/AboutUs.css
@@ -2,6 +2,8 @@
     height: auto;
     background-color: transparent;
     padding-top: 100px;
+    padding-left: 50px;
+    padding-right: 50px;
     /*background-color: #fff;*/
     /*padding-top: 35px;*/
 }
@@ -14,6 +16,22 @@
     padding: 32px 40px 56px;
     margin-top: 58px;
     margin: 10px;
+}
+.block:hover{
+    border-radius: 4px;
+    box-shadow: 0 10px 29px rgba(92,141,255,.22);
+    margin-bottom: 50px;
+    padding: 32px 40px 56px;
+    background-color: #003bb3;
+    color:white;
+    height: 200px;
+    top:-12px;
+
+}
+.block1height:hover{
+  /*height: 150px;
+  width: 220px;
+*/
 }
 
 .block h2{
@@ -35,22 +53,34 @@
 }
 
 .block1height{
-  height: 142px;
-width: 311px;
+    top: 15px;
+    height: 160px;
+    width: 260px;
+    margin-left: 44px;
 }
 .block2height{
+  top:15px;
+
   height: 300px;
 }
 .block3height{
+  top:15px;
+
   height: 300px;
 }
 .block4height{
+  top:15px;
+
   height: 300px;
 }
 .block5height{
+  top:15px;
+
   height: 300px;
 }
 .block6height{
+    top:15px;
+
   height: 300px;
 }
 
@@ -60,25 +90,27 @@ width: 311px;
 .para-top{
   margin-top: -90px;
   margin-bottom: 24px;
+  font-size: 50px;
 }
 
 .para1-top{
     margin-top: 28px;
     margin-bottom: 30px;
+    font-size: 50px;
 }
 
 .iog_txt{
-    margin-top: 66px;
-    margin-left: 57px;
+    margin-top: 81px;
+    margin-left: 34px;
     font-size: 20px;
     }
-
+/*
 .block1{
     border-radius: 4px;
     box-shadow: 0 10px 29px rgba(92,141,255,.22);
     margin-bottom: 50px;
     padding: 32px 40px 56px;
-    background-color: blue;
+    background-color: #003bb3;
     color:white;
     margin: 10px;
 }
@@ -86,14 +118,14 @@ width: 311px;
     margin-top: 203px;
     margin-left: 57px;
     font-size: 20px;
-    }
+    }*/
 
   .btm_txt{
      margin-top: 53px;
   } 
 
   .b1width{
-   width: 377px;
+    width: 377px;
     margin-left: 211px;
     padding-top: 0px;
     height: 163px;
@@ -115,7 +147,8 @@ padding-top: 16px;
     font-size: 52px;
   } 
   .txt-size-founder{
-  font-weight: 100;
+  font-weight: 500;
+    font-size: 27px;
   }
  .head_spacing{
 margin-top: 54px;
@@ -124,3 +157,20 @@ margin-top: 54px;
  .para_spacing{ margin-top: 18px;
     margin-bottom: 40px;
   }
+
+  .line_subhead{
+    font-weight: 100;
+    font-size: 27px;
+  }
+
+  .line_para{
+    line-height: 23px;
+    letter-spacing: 1px;
+}
+.para-top3{
+  font-size: 50px;
+}
+
+.alg_lft{
+      margin-left: -22px;
+}
