Amit added changes

--- a/ui/website/src/App.css
+++ b/ui/website/src/App.css
@@ -96,7 +96,7 @@
  font-size: 14px;
  color: #000;
  /*background-color: #367588;*/
- border-top: 1px solid #eee;
+ /*border-top: 1px solid #eee;*/
 }
 .footer-two a{
 color: #000;
