--- a/ui/website/src/Header/Header.css
+++ b/ui/website/src/Header/Header.css
@@ -102,7 +102,7 @@
 }
 
 .dropDownMenu{
-  background: #29246a;
+  background: #003bb3;
 }
 
 .navPadding{
@@ -119,7 +119,7 @@
 
 .navbar-default .navPadding>.open>a, .navbar-default .navPadding>.open>a:focus, .navbar-default .navPadding>.open>a:hover{
     color: #fff;
-    background-color: #29246a;
+    background-color: #003bb3;
 }
 /*#aa:focus ~ #bb, #aa:hover ~ #bb{
   background-color: #29246a;
