--- a/ui/website/src/AboutUs/AboutUs.css
+++ b/ui/website/src/AboutUs/AboutUs.css
@@ -2,10 +2,12 @@
     height: auto;
     background-color: transparent;
     padding-top: 161px;
-    padding-left: 50px;
-    padding-right: 50px;
+ /* padding-top: 282px;*/
+    padding-left: 00px;
+    padding-right: 0px;
     /*background-color: #fff;*/
     /*padding-top: 35px;*/
+    /*padding: 0;*/
 }
 
 .block{
@@ -16,8 +18,59 @@
     /*padding: 32px 40px 56px;*/
     margin-top: 58px;
     text-align: center;
+   
+    
  /*   margin: 10px;
     margin-left: 43px;*/
+}
+.icn_1{
+
+}
+
+
+.block:hover .icn1_hover{
+  display: block;
+}
+.block:hover .icn_1{
+  display: none;
+}
+.block .icn1_hover{
+  display: none;
+}
+
+.icn_2{
+  margin-top: 39px;
+  margin-bottom: -57px;
+}
+
+.block:hover .icn2_hover{
+  display: block;
+}
+.block:hover .icn_2{
+  display: none;
+}
+.block .icn2_hover{
+  display: none;
+}
+
+.block:hover .icn3_hover{
+  display: block;
+}
+.block:hover .icn_3{
+  display: none;
+}
+.block .icn3_hover{
+  display: none;
+}
+
+.block:hover .icn4_hover{
+  display: block;
+}
+.block:hover .icn_4{
+  display: none;
+}
+.block .icn4_hover{
+  display: none;
 }
 .block:hover{
     border-radius: 4px;
@@ -26,13 +79,17 @@
     padding: 32px 40px 56px;
     background-color: #003bb3;
     color:white;
+    background-image:url("/images/11.png") no-repeat;
     height: 200px;
     top:12px;
 
 }
 .block1height:hover{
-  height: 200px;
-  margin-bottom: 50px;
+  /*height: 200px;*/
+    height: 290px;
+    margin-bottom: -5px;
+    margin-top: 15px;
+    transition-duration: 1s;
 /*  width: 220px;*/
 
 }
@@ -57,7 +114,8 @@
 
 .block1height{
     top: 15px;
-    height: 186px;
+    /*height: 186px;*/
+    height: 240px;
     width: 286px;
     /*width: 260px;*/
     /*margin-left: 44px;*/
@@ -92,22 +150,28 @@
     text-align: justify;
 }
 .para-top{
-  margin-top: -76px;
-  margin-bottom: 24px;
-  font-size: 50px;
+     margin-top: -124px;
+    margin-bottom: 10px;
+    font-size: 50px;
 }
 
 .para1-top{
-    margin-top: 28px;
-    margin-bottom: 30px;
+    margin-top: 56px;
+    margin-bottom: -1px;
     font-size: 50px;
 }
 
 .iog_txt{
-    margin-top: 81px;
+    margin-top: 73px;
     /*margin-left: 34px;*/
     font-size: 20px;
     }
+
+/*.iog_txt1{
+    margin-top: 57px;
+    margin-left: 34px;
+    font-size: 20px;
+    }*/
 /*
 .block1{
     border-radius: 4px;
@@ -149,32 +213,44 @@ padding-top: 16px;
 
   .txt-size-director{
     font-size: 52px;
+    
   } 
   .txt-size-founder{
-  font-weight: 500;
+    font-weight: 500;
     font-size: 27px;
+    color: #fff;
   }
  .head_spacing{
 margin-top: 54px;
 }
 
- .para_spacing{ margin-top: 18px;
-    margin-bottom: 40px;
+ .para_spacing{
+    margin-top: 18px;
+    margin-bottom: 25px;
+    color: #fff;
+    
   }
 
   .line_subhead{
-    font-weight: 100;
-    font-size: 27px;
+    font-weight: 600;
+    font-size: 24px;
+    margin-top: 2px;
   }
 
   .line_para{
     line-height: 23px;
     letter-spacing: 1px;
+     margin-top: -3px;
+
+
 }
 .line_para1{
     line-height: 23px;
     letter-spacing: 1px;
+    margin-top: 228px;
+    padding-right: 30px;
 }
+
 .line_para2{
     line-height: 23px;
     letter-spacing: 1px;
@@ -182,18 +258,21 @@ margin-top: 54px;
 .line_para3{
     line-height: 23px;
     letter-spacing: 1px;
-    margin-top: 50px;
-}
+    margin-top: 188px;  
+    color: #fff;
+  }
 .line_para4{
     line-height: 23px;
     letter-spacing: 1px;
 }
 .para-top3{
   font-size: 50px;
+  margin-top: 95px;
 }
 
 .alg_lft{
       margin-left: -22px;
+      color: #fff;
 }
 
 .blck{
@@ -207,10 +286,12 @@ margin-top: 54px;
 }
 
 .blck1height{
-    top: 15px;
+    top: 137px;
     height: 196px;
     width: 427px;
     margin-left: 161px;
+    margin-top: 86px;
+    border-radius: 10px;
 }
    /*.anim_box{ color: rgba(0, 0, 0, 0.5);
     transform: translate3d(0px, 0%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
@@ -219,18 +300,154 @@ margin-top: 54px;
 
 .blk_ht{
   height: 325px;
+  margin-top: 24px;
 }
 
 .line1{
   background-color: #f19000;
-    width: 105px;
-    margin-top: -103px;
-    height: 4px;
+  width: 105px;
+  height: 4px;
+  margin-top: -70px;
+  margin-left: -640px;
 }
 
 .line2{
-    background-color: #f19000;
+  background-color: #f19000;
     width: 105px;
-    margin-top: 6px;
+    margin-top: 43px;
     height: 4px;
+    margin-left: 579px;
+}
+
+.line_ht{
+  line-height: 2;
+  margin-bottom: 10px;
+}
+
+.ln_ht{
+  margin-bottom: 10px;
+}
+.ln_ht2{
+  margin-bottom: 107px;
+}
+
+.img1{
+  height: ;
+  width: ;
+}
+
+/*****************************************************************************************/
+.intro_img{
+    width: 80%;
+    margin-top: -185px;
+    margin-left: 9px;
+  }
+.third_img{
+  width: 100%;
+  margin-top: 46px;
+}
+.line_yellow{
+  background-color: #f19000;
+  width: 105px;
+  margin-top: 145px;
+  height: 4px;
+}
+
+.truck{
+    width: 68%;
+    margin-top: 126px;
+    margin-left: 113px;
+}
+
+.plane{
+    width: 91%;
+    margin-left: 49px;
+    margin-top: 147px;
+}
+
+.director_img{
+  width: 36%;
+  margin-left: 171px;
+  margin-top: 195px;
+  border: 9px solid #fff;
+}
+.curve_img{
+    width: 63%;
+    margin-top: -352px;
+    margin-left: 692px;
+}
+.icon1{
+  margin-top: 37px;
+  margin-bottom: -55px;
+}
+.icn1_hover{
+  margin-top: 37px;
+  margin-bottom: -55px;
+  margin-left: 71px;
+
+}
+./*block:hover  .icon1{
+  margin-top: 37px;
+  margin-bottom: -55px;
+}
+.icon1:hover .icn1_hover{
+  background-image: url("/images/11.png");
+  margin-top: 37px;
+  margin-bottom: -55px;
+}*/
+.icon2{
+  margin-top: 37px;
+  margin-bottom: -55px;
+}
+.icn2{
+  margin-top: 35px;
+}
+.icn2_hover{
+  margin-top: 37px;
+  margin-bottom: -55px;
+  margin-left: 71px;
+
+}
+.icon3{
+  margin-top: 37px;
+  margin-bottom: -55px;
+}
+.icn3_hover{
+  margin-top: 37px;
+  margin-bottom: -55px;
+  margin-left: 71px;
+
+}
+.icon4{
+  margin-top: 37px;
+  margin-bottom: -55px;
+}
+.icn4_hover{
+  margin-top: 37px;
+  margin-bottom: -55px;
+  margin-left: 71px;
+
+}
+.blck2height{
+    top: 101px;
+    height: 196px;
+    width: 427px;
+    margin-left: 161px;
+    margin-top: 86px;
+    border-radius: 10px;
+}
+
+.bckgrnd_curve_img {
+  background-image: url("/images/6.png");
+  background-size: 100% 100%;
+  background-size: 100% 100%;
+  height: 550px !important;
+  margin-top: 50px;
+}
+
+.backgrd_curve1{
+  background-image: url("/images/6.png");
+  background-size: 100% 100%;
+  height: 580px;
+ /* height: 352px;*/
 }
