--- a/ui/website/src/AboutUs/AboutUs.css
+++ b/ui/website/src/AboutUs/AboutUs.css
@@ -10,7 +10,7 @@
     /*padding: 0;*/
 }
 
-.block{
+.aboutus_block{
     /*background-color: #ffc60b;*/
     border-radius: 4px;
     box-shadow: 0 10px 29px rgba(92,141,255,.22);
@@ -28,13 +28,13 @@
 }
 
 
-.block:hover .icn1_hover{
+.aboutus_block:hover .icn1_hover{
   display: block;
 }
-.block:hover .icn_1{
+.aboutus_block:hover .icn_1{
   display: none;
 }
-.block .icn1_hover{
+.aboutus_block .icn1_hover{
   display: none;
 }
 
@@ -43,36 +43,36 @@
   margin-bottom: -57px;
 }
 
-.block:hover .icn2_hover{
+.aboutus_block:hover .icn2_hover{
   display: block;
 }
-.block:hover .icn_2{
+.aboutus_block:hover .icn_2{
   display: none;
 }
-.block .icn2_hover{
+.aboutus_block .icn2_hover{
   display: none;
 }
 
-.block:hover .icn3_hover{
+.aboutus_block:hover .icn3_hover{
   display: block;
 }
-.block:hover .icn_3{
+.aboutus_block:hover .icn_3{
   display: none;
 }
-.block .icn3_hover{
+.aboutus_block .icn3_hover{
   display: none;
 }
 
-.block:hover .icn4_hover{
+.aboutus_block:hover .icn4_hover{
   display: block;
 }
-.block:hover .icn_4{
+.aboutus_block:hover .icn_4{
   display: none;
 }
-.block .icn4_hover{
+.aboutus_block .icn4_hover{
   display: none;
 }
-.block:hover{
+.aboutus_block:hover{
     border-radius: 4px;
     box-shadow: 0 10px 29px rgba(92,141,255,.22);
     margin-bottom: 50px;
@@ -84,7 +84,7 @@
     top:12px;
 
 }
-.block1height:hover{
+.aboutus_block1height:hover{
   /*height: 200px;*/
     height: 290px;
     margin-bottom: -5px;
@@ -94,7 +94,7 @@
 
 }
 
-.block h2{
+.aboutus_block h2{
    /* margin-top: 28px;*/
     font-size: 28px;
     line-height: 34px;
@@ -112,7 +112,7 @@
     letter-spacing: -.4px;
 }
 
-.block1height{
+.aboutus_block1height{
     top: 15px;
     /*height: 186px;*/
     height: 240px;
@@ -120,27 +120,27 @@
     /*width: 260px;*/
     /*margin-left: 44px;*/
 }
-.block2height{
+.aboutus_block2height{
   top:15px;
 
   height: 300px;
 }
-.block3height{
+.aboutus_block3height{
   top:15px;
 
   height: 300px;
 }
-.block4height{
+.aboutus_block4height{
   top:15px;
 
   height: 300px;
 }
-.block5height{
+.aboutus_block5height{
   top:15px;
 
   height: 300px;
 }
-.block6height{
+.aboutus_block6height{
     top:15px;
 
   height: 300px;
