--- a/ui/website/src/Header/Header.css
+++ b/ui/website/src/Header/Header.css
@@ -14,7 +14,7 @@
   background: transparent;
 }
 .navbar-default .navbar-nav > li > a{
-  color:#000;
+  color:#40E0D0;
   font-weight: 600;
 }
 .navbar-default .navbar-nav > li > a {
