--- a/ui/website/src/ContactPage/Contactpage.css
+++ b/ui/website/src/ContactPage/Contactpage.css
@@ -3,43 +3,44 @@
 	margin-top: 30px;
 }
 .contactcontent2-wrap{
-  margin-top: 30px;
+  margin:100px 0px;
   color: #fff;
+  background-image: url("/images/contactusbg.png");
+  background-size: 100% 100%;
+  height: 950px;
 }
 .contactcontent{
-  padding: 0px 0px;
-  font-family: arial;
+margin-bottom: 50px;
 }
 
-.contactcontent h6,h3{
- text-transform: uppercase;
+.contactcontent span{
  font-weight: bold;
+ font-size: 40px;
  }
-.contactcontent hr{
-  width: 35px;
-  border:3px solid #C8B476;
-  
-}
+ .us{
+  font-weight: 100!important;
+ }
+
 
 .bw{
   background-color: #f0f;
 }
 
 .contactcontbackimg{
-  background-image: url("/images/contactcontimg.jpg");
-  background-size: 100%;
-  height: 700px;
-  background-color: #555;
+  background-image: url("/images/contactussocial.png");
+  background-size: 100% 100%;
+  height: 450px;
+  /*background-color: #555;*/
 }
 .contactpageform{
-  background-color: #ddd;
+  /*background-color: #ddd;*/
   height: 700px;
   color: #555;
 }
 
 .contacticon1{
   font-size: 45px;
-  color: #7F8545;
+  cursor: pointer;
 
 }
 
@@ -47,37 +48,37 @@
   color: #fff;
   font-size: 27px;
   position: absolute;
-  right: 35px;
-  top: 10px;
+  right: 44px;
+  top: 8px;
 
 }
 .contacticon21{
   color: #fff;
   font-size: 25px;
   position: absolute;
-  right: 35px;
-  top: 12px;
+  right: 44px;
+  top: 8px;
 
 }.contacticon22{
   color: #fff;
   font-size: 23px;
   position: absolute;
-  right: 35px;
+  right: 44px;
   top: 10px;
 
 }.contacticon23{
   color: #fff;
   font-size: 25px;
   position: absolute;
-  right: 34px;
-  top: 11px;
+  right: 44px;
+  top: 9px;
 
 }
 .contacttextmargin{
   margin-top: 70px;
 } 
 .contacttextmargin2{
-  margin-top: 50px;
+  margin-top: 120px;
 } 
 .contacttextmargin h4{
   text-transform: capitalize;
@@ -87,9 +88,9 @@
   /*border-radius:0px;*/
   /*font-size: 12px;*/
   font-weight: 600;
-  background-color: #7D8342;
   padding:10px 20px;
   margin-top: 50px;
+  color: #fff;
 }
 
 
@@ -131,4 +132,12 @@
 
 .redFont{
   color: #f00;
+}
+
+.contacticonwrap{
+  margin-top: 270px;
+}
+
+.contacticons{
+  margin-top: 20px;
 }
