--- a/ui/website/src/effects/effects.css
+++ b/ui/website/src/effects/effects.css
@@ -12,7 +12,7 @@
   width: 250px;
   height: 200px;
   position: relative;
-  perspective: 5171px;
+  perspective: 10000px;
 }
 
 .carousel1 {
@@ -37,27 +37,33 @@
   border-radius: 10px;
 }
 
-.a {
-  transform: rotateY(0deg) translateZ(320px);
+#carousel1 figure:nth-child(1){
+  transform: rotateY(0deg) translateZ(260px);
   background: #ed1c24;
 }
-.b {
-  transform: rotateY(52deg) translateZ(320px);
+#carousel1 figure:nth-child(2){
+  transform: rotateY(72deg) translateZ(260px);
   background: #0072bc;
 }
-.c {
-  transform: rotateY(144deg) translateZ(320px);
+#carousel1 figure:nth-child(3){
+  transform: rotateY(144deg) translateZ(260px);
   background: #39b54a;
 }
-.d {
-  transform: rotateY(216deg) translateZ(320px);
+#carousel1 figure:nth-child(4){
+  transform: rotateY(216deg) translateZ(260px);
   background: #f26522;
 }
-.e {
-  transform: rotateY(288deg) translateZ(320px);
-  background: #630460;
-} 
+#carousel1 figure:nth-child(5){
+  transform: rotateY(288deg) translateZ(260px);
+/*  background: #630460;
+*/} 
 
+/*#carousel1 figure:nth-child(1) {transform: rotateY(0deg) translateZ(300px);}
+#carousel1 figure:nth-child(2) { transform: rotateY(72deg) translateZ(300px);}
+#carousel1 figure:nth-child(3) { transform: rotateY(144deg) translateZ(300px);}
+#carousel1 figure:nth-child(4) { transform: rotateY(216deg) translateZ(300px);}
+#carousel1 figure:nth-child(5) { transform: rotateY(288deg) translateZ(300px);}
+*/
 
 .next, .prev {
   color: #444;
