--- a/ui/website/src/Banner/Banner.css
+++ b/ui/website/src/Banner/Banner.css
@@ -22,15 +22,17 @@
     /* max-width: 930px; */
     /* position: relative; */
     background-size: 100% 100%;
-    width: 100%;
+    background-repeat: no-repeat;
+    width: 90%;
     margin-right: auto;
     height: 550px;
     margin-left: auto;
     float: left;
-    /*background-image: url(/images/IOG_2.png);*/
+    background-image: url(/images/comingsoon.jpg);
     background-color: #666666;
     padding-top: 144px;
     padding-bottom: 158px;
+    margin-left: 100px;
 }
 .lead {
     font-size: 18px;
