--- a/ui/website/src/Header/Header.css
+++ b/ui/website/src/Header/Header.css
@@ -152,3 +152,10 @@
 .dropdown-header{
   color: #ffc60b;
 }
+
+.headerbkimg{
+  background-image: url("/images/background.png");
+  background-size: 100% 100%;
+  width: 100%;
+  height: 250px;
+}
