Manali refined changes in about us page

--- a/ui/website/src/AboutUs/AboutUs.css
+++ b/ui/website/src/AboutUs/AboutUs.css
@@ -456,3 +456,6 @@ margin-top: 54px;
   height: 580px;
  /* height: 352px;*/
 }
+
+
+/********************************HEADER CSS***************************************************/
