Amit added changes

--- a/ui/website/src/Banner/Banner.css
+++ b/ui/website/src/Banner/Banner.css
@@ -28,7 +28,7 @@
     height: 550px;
     margin-left: auto;
     float: left;
-    background-image: url(/images/comingsoon.jpg);
+    background-image: url(/images/comingsoon.png);
     background-color: #666666;
     padding-top: 144px;
     padding-bottom: 158px;
