--- a/ui/website/src/ContactPage/Contactpage.css
+++ b/ui/website/src/ContactPage/Contactpage.css
@@ -5,9 +5,9 @@
 .contactcontent2-wrap{
   margin:30px 0px;
   color: #fff;
-  background-image: url("/images/contactusbg.png");
+  /*background-image: url("/images/contactusbg.png");*/
   background-size: 100% 100%;
-  height: 950px;
+  height: 850px;
 }
 .contactcontent{
 margin-bottom: 50px;
@@ -145,6 +145,7 @@ margin-bottom: 50px;
 
 .contactcurve_img{
     width: 100%;
-    margin-top: -122px;
+    margin-top: -140px;
     margin-left: 250px;
+    height: 100px;
 }
