--- a/ui/website/src/CareersPage/HeadingComponent/Headingcomponent.css
+++ b/ui/website/src/CareersPage/HeadingComponent/Headingcomponent.css
@@ -26,13 +26,13 @@
 }
 .iogimgblock1{
   width: 100%;
-  padding-top: 69px;
+  padding-top: 142px;
 }
 
 .iogblock1text{
   padding-top: 100px;
   font-size: 15px;
-  margin-top: 72px;
+  margin-top: 142px;
 }
 
 .iogblock1text span{
@@ -50,6 +50,75 @@
 
 .career1_img{
 width: 100%;
-margin-top: -167px;
+margin-top: -141px;
 padding-right: 45px;
+}
+
+.button_1 {
+    border-radius: 4px;
+    background-color: #00bfff;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 18px;
+    padding-top: 10px;
+    padding-right: 22px;
+    padding-bottom: 10px;
+    padding-left: 14px;
+    width: 136px;
+    transition: all 0.5s;
+    cursor: pointer;
+    /* margin: 5px; */
+    margin-top: -16px;
+    margin-left: 22px;
+    height: -24px;
+    border-radius: 40px;
+}
+
+
+.button_1 span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button_1 span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  left: 105px;
+  transition: 0.5s;
+}
+
+.button_1:hover span {
+  /*padding-right: 25px;*/
+
+}
+
+.button_1:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+
+.career_para-top2{
+  font-size: 50px;
+  font-weight: 100;
+  color: #666666;
+  padding-left: 22px;
+  margin-top: 257px;
+}
+.line_subhead2{
+  padding-left: 22px;
+  font-size: 20px;
+  color: #808080;
+  margin-bottom: 41px;
+  margin-top: 28px;
+}
+.career2_img{
+ width: 100%;
+ margin-top: 160px;
+ padding-left: 22px;
 }
