--- a/ui/website/src/Banner/Banner.css
+++ b/ui/website/src/Banner/Banner.css
@@ -1,121 +1,5 @@
-.banner-wrapper{
-	width: 150vw;
-	margin-top: -102px;
-	left: 50%;
-    -webkit-transform: translateX(-50%);
-    transform: translateX(-50%);
-    position: relative;
-}
-.banner{
-	border-radius: 0 0 50% 50%;
-	
-    position: relative;
-    z-index: 1;
-    overflow: hidden;
-    /*background-image: linear-gradient(44deg,#8232ec,#695cff);*/
-    background: #333;
-    background-size: 100% 75%;
-    color: #fff;
-    height: 500px;
-}
-.bannerContainer {
-    /* max-width: 930px; */
-    /* position: relative; */
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    width: 90%;
-    margin-right: auto;
-    height: 550px;
-    margin-left: auto;
-    float: left;
-    background-image: url(/images/comingsoon.png);
-    background-color: #666666;
-    padding-top: 144px;
-    padding-bottom: 158px;
-    margin-left: 100px;
-}
-.lead {
-    font-size: 18px;
-    line-height: 28px;
-}
-.title-h1{
-    font-size: 40px;
-    line-height: 48px;
-    margin-bottom: 16px;
-    font-weight: 500;
-    letter-spacing: -.4px;
-}
-.Home_Buttons {
-    margin-top: 40px;
-}
-.Home_BlueButton {
-    margin-right: 20px;
-}
-.btn--fill {
-	border-radius: 28px;
-    background-color: #37cd8f;
-    color: #fff;
-}
-.btn--shadow-blue {
-    box-shadow: 0 10px 25px 0 rgba(65,54,181,.45);
-}
-.btn-style{
-	display: inline-block;
-    border: 2px solid transparent;
-    border-radius: 28px;
-    cursor: pointer;
-    font: inherit;
-    font-weight: 500;
-    line-height: 44px;
-    outline: none;
-    text-align: center;
-    text-decoration: none;
-    padding: 0 30px;
-    transition: background-color .2s,color .2s,box-shadow .2s;
-}
-.btn-style:hover{
-	color: #fff !important;
-}
-.btn-style:focus{
-	color: #fff !important;
-}
-.btn--stroke-white {
-	background: transparent;
-    border-color: #fff;
-    color: #fff;
-}
-
-.banner-wrapper:before {
-    left: -50px;
-    -webkit-animation: swell 7s ease -1.25s infinite;
-    animation: swell 7s ease -1.25s infinite;
-    opacity: .3;
-}
-
-.banner-wrapper:after {
-    left: 50px;
-    -webkit-animation: swell 7s cubic-bezier(.36,.45,.63,.53) infinite;
-    animation: swell 7s cubic-bezier(.36,.45,.63,.53) infinite;
-    opacity: .1;
-}
-@keyframes swell {
-  0%,
-  100% {
-    transform: translate3d(0, -5px, 0);
-  }
-  50% {
-    transform: translate3d(0, 15px, 0);
-  }
-}
-
-.banner-wrapper:after, .banner-wrapper:before {
-    position: absolute;
-    z-index: 0;
-    bottom: -5px;
-    left: 0;
+.homecurve_img img{
     width: 100%;
-    height: 100%;
-    background-color: #367588;
-    border-radius: 0 0 50% 50%;
-    content: "";
+    margin-top: -140px;
+    margin-left: 250px;
 }
