--- a/ui/website/src/ContactPage/Contactpage.css
+++ b/ui/website/src/ContactPage/Contactpage.css
@@ -3,7 +3,7 @@
 	margin-top: 30px;
 }
 .contactcontent2-wrap{
-  margin:30px 0px;
+  /*margin:30px 0px;*/
   color: #fff;
   /*background-image: url("/images/contactusbg.png");*/
   background-size: 100% 100%;
@@ -28,7 +28,7 @@ margin-bottom: 50px;
 
 .contactcontbackimg{
   background-image: url("/images/contactussocial.png");
-  background-size: 90% 90%;
+  background-size: 100%;
   height: 450px;
   background-repeat: no-repeat;
   /*background-color: #555;*/
@@ -46,12 +46,11 @@ margin-bottom: 50px;
 }
 
 .contacticon2{
-  color: #fff;
-  font-size: 29px;
-  position: absolute;
-  right: 38px;
-  top: 12px;
-
+    padding: 5px 6px;
+    background-color: #003bb3;
+    font-size: 35px;
+    border: 5px solid #003bb3;
+    border-radius: 50%
 }
 .contacticon21{
   color: #fff;
@@ -60,14 +59,16 @@ margin-bottom: 50px;
   right: 38px;
   top: 12px;
 
-}.contacticon22{
+}
+.contacticon22{
   color: #fff;
   font-size: 25px;
   position: absolute;
   right: 38px;
   top: 12px;
 
-}.contacticon23{
+}
+.contacticon23{
   color: #fff;
   font-size: 27px;
   position: absolute;
@@ -149,3 +150,4 @@ margin-bottom: 50px;
     margin-left: 250px;
     height: 100px;
 }
+
