Amit added changes

--- a/ui/website/src/allPages/AboutUs/AboutUs.css
+++ b/ui/website/src/allPages/AboutUs/AboutUs.css
@@ -314,16 +314,17 @@ margin-top: 54px;
   background-color: #f19000;
   width: 105px;
   height: 4px;
-  margin-top: 210px;
-  margin-left: -683px;
+  /*margin-top: 210px;*/
+  /*margin-left: -683px;*/
 }
 
 .line2{
   background-color: #f19000;
   width: 105px;
-  margin-top: 43px;
+  margin-top: 35px;
   height: 4px;
-  margin-left: 500px;
+  /*margin-left: 500px;*/
+  text-align: center;
 }
 
 .line_ht{
