--- a/ui/website/src/allPages/ContactPage/Contactpage.css
+++ b/ui/website/src/allPages/ContactPage/Contactpage.css
@@ -1,13 +1,13 @@
 
 .contactcontent1-wrap{
-	margin-top: 30px;
+	/*margin-top: 30px;*/
 }
 .contactcontent2-wrap{
   /*margin:30px 0px;*/
   color: #fff;
   /*background-image: url("/images/contactusbg.png");*/
   background-size: 100% 100%;
-  height: 850px;
+  height: 700px;
 }
 .contactcontent{
 margin-bottom: 50px;
@@ -32,6 +32,7 @@ margin-bottom: 50px;
   height: 450px;
   background-repeat: no-repeat;
   /*background-color: #555;*/
+  margin-top: 110px;
 }
 .contactpageform{
   /*background-color: #ddd;*/
@@ -77,10 +78,10 @@ margin-bottom: 50px;
 
 }
 .contacttextmargin{
-  margin-top: 70px;
+  /*margin-top: 70px;*/
 } 
 .contacttextmargin2{
-  margin-top: 120px;
+  /*margin-top: 120px;*/
 } 
 .contacttextmargin h4{
   text-transform: capitalize;
@@ -137,17 +138,10 @@ margin-bottom: 50px;
 }
 
 .contacticonwrap{
-  margin-top: 245px;
+  /*margin-top: 245px;*/
 }
 
 .contacticons{
   margin-top: 5px;
-}
-
-.contactcurve_img{
-    width: 100%;
-    margin-top: -140px;
-    margin-left: 250px;
-    height: 100px;
 }
 
