--- a/ui/website/src/allBlocks/Downstream/Downstream.css
+++ b/ui/website/src/allBlocks/Downstream/Downstream.css
@@ -11,28 +11,47 @@
     border-radius: 4px;
     box-shadow: 0 10px 29px rgba(92,141,255,.22);
     margin-bottom: 50px;
-    padding: 32px 40px 56px;
-    z-index: 100;
+    padding: 32px 45px 56px;
+    height: auto;
+}
+.block img{
+  height: 150px;
 }
 
 .block h2{
-	margin-top: 70px;
+	/*margin-top: 70px;*/
 	font-size: 28px;
   line-height: 34px;
   font-weight: 600;
+  text-align: center;
+}
+.block p{
+  font-size: 14px;
+  color:#000;
 }
 
 .contentheader{
 	padding-bottom:35px;
 }
 .contentheader h1{
-	font-size: 40px;
-    line-height: 48px;
+	font-size: 45px;
+    line-height: 20px;
     font-weight: 700;
     letter-spacing: -.4px;
 }
+.contentheader h2{
+  font-size: 40px;
+    line-height: 50px;
+    letter-spacing: -.4px;
+}
+.contentheader hr{
+  height: 2px;
+  width: 100px;
+  border: 1px solid #f19000;
+  background-color: #f19000;
+}
 
-.block1height{
+/*.block1height{
   height: 300px;
 }
 .block2height{
@@ -50,7 +69,7 @@
 .block6height{
   height: 300px;
 }
-
+*/
 .text-justify{
 	text-align: justify;
 }
