--- a/ui/website/src/allPages/AboutUs/AboutUs.css
+++ b/ui/website/src/allPages/AboutUs/AboutUs.css
@@ -91,24 +91,21 @@
 
 }
 .aboutus_block1height:hover{
-  /*height: 200px;*/
     height: 290px;
     margin-bottom: -5px;
     margin-top: 15px;
-    transition-duration: 1s;
-/*  width: 220px;*/
+    transition-duration: 1.2s;
 
 }
 
 .aboutus_block h2{
-   /* margin-top: 28px;*/
     font-size: 28px;
     line-height: 34px;
     font-weight: 600;
     margin-top: 13px;
 }
 
-.contentheader{
+/*.contentheader{
     padding-bottom:35px;
 }
 .contentheader h1{
@@ -117,7 +114,7 @@
     font-weight: 700;
     letter-spacing: -.4px;
 }
-
+*/
 .aboutus_block1height{
     top: 15px;
     /*height: 186px;*/
